build/log/idf_py_stderr_output_6778
Command: make -j 14 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c: In function 'serve_file':
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:61:26: error: implicit declaration of function 'read'; did you mean 'fread'? [-Wimplicit-function-declaration]
   61 |     while ((bytes_read = read(fd, buffer, sizeof(buffer))) > 0) {
      |                          ^~~~
      |                          fread
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:63:13: error: implicit declaration of function 'close'; did you mean 'pclose'? [-Wimplicit-function-declaration]
   63 |             close(fd);
      |             ^~~~~
      |             pclose
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c: At top level:
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:94:23: warning: 'start_webserver' defined but not used [-Wunused-function]
   94 | static httpd_handle_t start_webserver(void)
      |                       ^~~~~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:91:26: error: 'scan_json_uri' defined but not used [-Werror=unused-const-variable=]
   91 | static const httpd_uri_t scan_json_uri = { .uri = "/scan.json", .method = HTTP_GET, .handler = scan_json_handler };
      |                          ^~~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:90:26: error: 'hardware_uri' defined but not used [-Werror=unused-const-variable=]
   90 | static const httpd_uri_t hardware_uri = { .uri = "/hardware.html", .method = HTTP_GET, .handler = hardware_page_handler };
      |                          ^~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:89:26: error: 'bee2_jpg_uri' defined but not used [-Werror=unused-const-variable=]
   89 | static const httpd_uri_t bee2_jpg_uri = { .uri = "/bee2.jpg", .method = HTTP_GET, .handler = bee2_jpg_handler };
      |                          ^~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:88:26: error: 'bee1_jpg_uri' defined but not used [-Werror=unused-const-variable=]
   88 | static const httpd_uri_t bee1_jpg_uri = { .uri = "/bee1.jpg", .method = HTTP_GET, .handler = bee1_jpg_handler };
      |                          ^~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:87:26: error: 'style_css_uri' defined but not used [-Werror=unused-const-variable=]
   87 | static const httpd_uri_t style_css_uri = { .uri = "/style.css", .method = HTTP_GET, .handler = style_css_handler };
      |                          ^~~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:86:26: error: 'main_uri' defined but not used [-Werror=unused-const-variable=]
   86 | static const httpd_uri_t main_uri = { .uri = "/", .method = HTTP_GET, .handler = main_page_handler };
      |                          ^~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:24:13: warning: 'event_handler' defined but not used [-Wunused-function]
   24 | static void event_handler(void* arg, esp_event_base_t event_base,
      |             ^~~~~~~~~~~~~
/home/frank/Projects/beemonitor/beemonitor/main/provisioning.c:19:23: warning: 'server' defined but not used [-Wunused-variable]
   19 | static httpd_handle_t server = NULL;
      |                       ^~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:132: esp-idf/main/CMakeFiles/__idf_main.dir/provisioning.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:6501: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
